fix: two new poi groups constructor